tests/NormalTests/paczka1/fuzzy1/94724675.err
Error in line 18: z2z S171 50,9
Error in line 12: ncv A321 72,8
Error in line 25: bA7 S171 -2,3
Error in line 28: z2z A321 -1,8
Error in line 24: wYo S171 48,9
Error in line 21: z2z A321 11,5
